@@ -1,0 +1,78 @@
+#
+#  This file contains a number of default properties for JSPWiki.  Anything
+#  can be overridden in the actual jspwiki.properties file.
+#
+
+#
+#  Preferences for default template 
+#
+jspwiki.defaultprefs.template.skinname =PlainVanilla
+jspwiki.defaultprefs.template.dateformat =dd-MMM-yyyy HH:mm
+# by default, the default timezone is read from the server
+# jspwiki.defaultprefs.template.timezone =GMT+01:00
+jspwiki.defaultprefs.template.orientation =fav-left
+jspwiki.defaultprefs.template.editor =plain
+
+jspwiki.defaultprefs.timeformat.01=d/MM
+jspwiki.defaultprefs.timeformat.02=d/MM/yy
+jspwiki.defaultprefs.timeformat.03=d/MM/yyyy
+jspwiki.defaultprefs.timeformat.04=dd/MM/yy
+jspwiki.defaultprefs.timeformat.05=dd/MM/yyyy
+jspwiki.defaultprefs.timeformat.06=EEE, dd/MM/yyyy
+jspwiki.defaultprefs.timeformat.07=EEE, dd/MM/yyyy, Z
+jspwiki.defaultprefs.timeformat.08=EEE, dd/MM/yyyy, zzzz
+jspwiki.defaultprefs.timeformat.09=d/MM/yy HH:mm
+jspwiki.defaultprefs.timeformat.10=d/MM/yy hh:mm a
+jspwiki.defaultprefs.timeformat.11=d/MM/yy hh:mm a, Z
+jspwiki.defaultprefs.timeformat.12=dd-MMM
+jspwiki.defaultprefs.timeformat.13=dd-MMM-yy
+jspwiki.defaultprefs.timeformat.14=dd-MMM-yyyy
+jspwiki.defaultprefs.timeformat.15=EEE, dd-MMM-yyyy
+jspwiki.defaultprefs.timeformat.16=EEE, dd-MMM-yyyy, Z
+jspwiki.defaultprefs.timeformat.17=EEE, dd-MMM-yyyy, zzzz
+jspwiki.defaultprefs.timeformat.18=dd-MMM-yyyy HH:mm
+jspwiki.defaultprefs.timeformat.19=dd-MMM-yyyy hh:mm a
+jspwiki.defaultprefs.timeformat.20=dd-MMM-yyyy hh:mm a, Z
+jspwiki.defaultprefs.timeformat.21=MMMM dd, yyyy
+jspwiki.defaultprefs.timeformat.22=MMMM dd, yyyy HH:mm
+jspwiki.defaultprefs.timeformat.23=MMMM dd, yyyy hh:mm a
+jspwiki.defaultprefs.timeformat.24=MMMM, EEE dd,yyyy hh:mm a
+jspwiki.defaultprefs.timeformat.25=MMMM, EEEE dd,yyyy hh:mm a
+jspwiki.defaultprefs.timeformat.26=dd.MM.yyyy
+jspwiki.defaultprefs.timeformat.27=dd.MM.yyyy, HH:mm
+jspwiki.defaultprefs.timeformat.28=dd.MM.yyyy, HH:mm zz
+jspwiki.defaultprefs.timeformat.29=EEEE, dd.MM.yyyy
+jspwiki.defaultprefs.timeformat.30=EE, dd.MM.yyyy, HH:mm zz
+jspwiki.defaultprefs.timeformat.31=EEEE, d. MMMM yyyy, HH:mm zz
+jspwiki.defaultprefs.timeformat.32=yyyy-MM-dd, HH:mm zz
+jspwiki.defaultprefs.timeformat.33=yyyy-MM-dd, EEEE
+
+###########################################################################
+#
+#  Determine how certain file commands are run.  They have been
+#  commented out, since most likely you want to use the defaults.
+#  Be warned, making mistakes with these may well ruin your entire
+#  Wiki collection!
+#
+#  The command to run diff:
+#     NOTE! If you do not specify this, an internal "diff" routine is used.
+#           In most cases, you really should not touch this.
+#
+#jspwiki.diffCommand = diff -u %s1 %s2
+
+#  The command for RCS checkin
+#jspwiki.rcsFileProvider.checkinCommand = ci -q -mx -l -t-none %s
+
+#  The command for RCS checkout of the newest version
+#jspwiki.rcsFileProvider.checkoutCommand = co -l %s
+
+#  The command for checking out a specific version (%v = version number)
+#jspwiki.rcsFileProvider.checkoutVersionCommand = co -p -r1.%v %s
+
+#  The command for RCS log headers
+#  If you have a version of RCS that does not support the "-z" flag, then
+#  you can try this one out without it.  It should work.
+#jspwiki.rcsFileProvider.logCommand = rlog -zLT -h %s
+
+#  The command for getting the entire modification history
+#jspwiki.rcsFileProvider.fullLogCommand = rlog -zLT %s
